Basic frontend with posting to server, display queue

--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
 body {
-  color: white; }
+  color: white;
+  background: url("img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: auto 200%;
+  background-position: 40% top; }
+
+.title-img {
+  width: 40vw;
+  margin-left: 30vw;
+  margin-bottom: 10vh; }
+  @media (max-width: 700px) {
+    .title-img {
+      width: 80vw;
+      margin-left: 10vw; } }
+
+.mainpage-content {
+  width: 50vw;
+  margin-left: 25vw;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.7); }
+  @media (max-width: 950px) {
+    .mainpage-content {
+      width: 80vw;
+      margin-left: 10vw; } }
 
 .anim-humming_1 {
   opacity: 0.9;
@@ -9,26 +32,27 @@ body {
   opacity: 0.9;
   animation: humming 0.55s infinite; }
 
-.title-img {
-  width: 40vw;
-  margin-left: 30vw; }
-  @media (max-width: 700px) {
-    .title-img {
-      width: 80vw;
-      margin-left: 10vw; } }
+.anim-fade_in1 {
+  opacity: 1;
+  animation: fadein 2s; }
 
 @keyframes humming {
   0% {
     opacity: 0.9; }
   4% {
-    opacity: 0.85; }
+    opacity: 0.83; }
   8% {
     opacity: 0.9; }
   60% {
     opacity: 0.9; }
   63% {
-    opacity: 0.95; }
+    opacity: 0.97; }
   66% {
     opacity: 0.9; } }
+@keyframes fadein {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 /*# sourceMappingURL=style.css.map */
