Arduino added, copyright stuff

--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,13 @@
+/************************
+ * Stranger Lights Fontend CSS. Strangerlights.com
+ * 
+ * A halloween IoT project. Aphabet light board that displays messages from a server.
+ * 
+ * Copyright 2016 Lucas Watson
+ * 
+ * Released under GPL-3.0
+************************/
+
 //Convention:
 //pageElement-descriptor_modifiers(opt)
 
